# async-logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
cmake/: async_loggerConfig.cmake.in
examples/all_levels_cpp/: CMakeLists.txt  main.cpp
examples/basic_c_usage/: CMakeLists.txt  main.c
examples/basic_cpp_usage/: CMakeLists.txt  main.cpp
examples/concurrent_usage/: CMakeLists.txt  main.cpp
examples/custom_formatter/: CMakeLists.txt  main.cpp
examples/memory_sink/: CMakeLists.txt  main.cpp
include/: logger  logger.h
include/async_logger/: custom.h  types.h
src/: console_sink.hpp  custom_sink.hpp  file_sink.cpp  file_sink.hpp  log_formatter.hpp  logger.cpp  logger_impl.cpp  logger_impl.hpp  synchronized_queue.cpp  synchronized_queue.hpp
tests/: CMakeLists.txt  test_logger.cpp  test_queue.cpp
